Bug 709448 - File input click() handling should perhaps allow openControlled popups; r=bz